 - Improve judgedaemon performance. New setting update_judging_seconds that
   allows to control how often updates are sent back; more often is slower.
 - Upgrade to Symfony 3.4.
 - Remove old v3 API.
 - Upgrade jQuery to 3.3, Bootstrap to 4.1.
 - Add support for the R programming language (#516 thanks Michał Kaczanowicz).
 - Add support for creating a writable tempdirectory for submissions.

Version 6.0.3 - 15 December 2018
--------------------------------
 - Fix a race condition in runguard where in rare cases not all output was
   read from a pipe, resulting in wrong-answer verdicts.
 - Document that php-intl is now a requirement and fix results export.
 - Fix problem name sanitizing in zip upload.
 - Improve error detection while uploading test cases.
 - Don't break judgedaemon if in/output are missing for a testcase.
 - Fix scoreboard summary row when affiliation logos are enabled.
 - Do not try to set session params, fixes notices in newer PHP versions.
 - Remove mention of obsolete AUTH_METHOD configuration variable.
 - Fix problem import from Baylor after API change.
 - Set MySQL charset to UTF8mb4 for security and Emoji reasons.
 - Fix for modifying a user when the user has no roles.
 - Fix that users with balloons-only privileges could view more contest
   data than was strictly necessary.

Version 6.0.2 - 22 October 2018
-------------------------------
 - Fix config check for default admin password.
 - Fix balloon daemon for changed database structure.
 - Fix flash message on login page used after self-registration.
 - Fix scoreboard layout issue by preferring Roboto over sans-serif.
 - Fix a bug when submitting with entry_point containing spaces.
 - A few more fixes for potential errors.

Version 6.0.1 - 23 September 2018
---------------------------------
 - Security: disallow login for disabled user accounts.
   Thanks Henk van der Laan for reporting.
 - Fix eventlog for problems type.
 - dj_make_chroot: also install pypy for Ubuntu variant.