@@ -1,0 +1,2 @@
+#!/bin/sh
+# nothing to compile
