@@ -91,7 +91,8 @@ INSERT INTO `executable` (`execid`, `description`, `type`) VALUES
 ('run', 'default run script', 'run'),
 ('scala', 'scala', 'compile'),
 ('sh', 'sh', 'compile'),
-('r', 'r', 'compile');
+('r', 'r', 'compile'),
+('swift', 'swift', 'compile');
 
 --
 -- Dumping data for table `language`
@@ -118,7 +119,8 @@ INSERT INTO `language` (`langid`, `externalid`, `name`, `extensions`, `require_e
 ('rb', 'ruby', 'Ruby', '["rb"]', 0, "Main file", 0, 1, 1, 'rb'),
 ('scala', 'scala', 'Scala', '["scala"]', 0, NULL, 0, 1, 1, 'scala'),
 ('sh', 'sh', 'POSIX shell', '["sh"]', 0, "Main file", 0, 1, 1, 'sh'),
-('r', 'r', 'R', '["R"]', 0, "Main file", 0, 1, 1, 'r');
+('r', 'r', 'R', '["R"]', 0, "Main file", 0, 1, 1, 'r'),
+('swift', 'swift', 'Swift', '["swift"]', 0, "Main file", 0, 1, 1, 'swift');
 
 
 --
