@@ -77,13 +77,16 @@ UPDATE `language` SET `externalid` = 'ruby' WHERE langid = 'rb';
 UPDATE `language` SET `externalid` = `langid` WHERE `externalid` IS NULL;
 
 INSERT INTO `executable` (`execid`, `description`, `type`) VALUES
-('r', 'r', 'compile');
+('r', 'r', 'compile'),
+('swift', 'swift', 'compile');
 
 -- Copied from sql/mysql_db_files_defaultdata.sql after running make dist
 UPDATE executable SET zipfile = 0x504B03040A000000000074AA684EC241F8B4200000002000000005001C006275696C6455540900035CCE825C8CCE825C75780B000104F5010000041400000023212F62696E2F73680A23206E6F7468696E6720746F20636F6D70696C650A0A504B030414000000080042AB684E5BA3ADADF50200005905000003001C0072756E5554090003DCCF825CDCCF825C75780B000104F501000004140000006D545D6FD340107CC6BF62EB062A4193B63CA61F023506829A04A5A91002545DCEEBF854E7CEDC9D9B84AAFF9DDDB34D5D441EA2F8BC373B3B339BFDBDA3A5D2472E8FA27D988334EB5215081B2BCA126DDF49AB4A0F99B170D0BC1BB8FC6040C5D788E073E1A153E376DA8B2D089DC2DA5804A53343B554BDC8956B2B53830EB4F120A4AF4451EC206EB063424470A6B2120F61597922A23C550B82703916458B113A6F141D6495965E190DC285DBB8455979B12C70089B1C35486A81E921284F20E14A5D829D6674EEF3F02C8DB5283D51F7684B8BF4DD8C7548EF2B47188467364AAFE899867A2A4C5B306F608950393AF15668570AFAF6342751545943847E3753A77C4180F3A49B288C46204B84DDD5CA4D678BF165D2CC123A36D76CAB051D855E61869BEBE4F6F2D37C365B80D14C190943E6D690DE167F55CA929CB6A1A834356575A268945C2FCEE3DE490CA7A4B4CA7C34492657E3C9F8DFD3F7E3E9F5EC667E99D0F943325DCCBFDD7E998DA78B61BF77F21887186169ACAFCDD0DEEEA03424D221A943A3931D9A5B3B71CFA6E0603508D129042B6DB12CC46E18914ADFA1FF1BE25EA7430C3F4F195547401F94B981784C091B424AEA4B3620F4BB0DFD86D07BE21A4799626A530328DC8ED4DFB104142D4FA9AF75749D0873ED658EF28EFDEA0CC15ADF8B42A535C33DE85BE2D8E9F31F8A89B5C60E612D946E0392F18E1D74EE1D30B00E168994B31BC3C5ABB735C896443B09FC89D457DE8726C01CC19AFA3092B40E1744856D8CE1EC2C997D88F6FFEEF63E7C448D56848CF21AB58B4D1AB4CB307F1679D3721D70D751D0175265B55863D86F990BBD423E6210BA754F32812C84AB07C94C4555C8B3BB41AD56FCA3F770FCF2E8F5630C7BE7FC74FC24D70B9976DE376EDD688AFA9A71394B85E2CD40DA3D3665672A72911DF124ED1DB2AF8A88B3871EC5DA31ADD4406168FF092BC565B55A9164FCDF85DB90D0D9F46A3C4D6E3FDF8C3E26E727309A4D9A9F51C4AAC0BC51E9B9C344F35D1CB1C091CCD72605F166DB2ACF1789D07114FD01504B01021E030A000000000074AA684EC241F8B42000000020000000050018000000000001000000ED81000000006275696C6455540500035CCE825C75780B000104F50100000414000000504B01021E0314000000080042AB684E5BA3ADADF502000059050000030018000000000001000000ED815F00000072756E5554050003DCCF825C75780B000104F50100000414000000504B0506000000000200020094000000910300000000, md5sum = 'fe1a2827245169fcc939f2db6d2821d6' WHERE execid = 'r';
+UPDATE executable SET zipfile = 0x504B03040A0000000000D0AE684ED08595FC1F0000001F00000005001C006275696C64555409000388D6825C6DD9825C75780B000104F5010000041400000023212F62696E2F73680A23206E6F7468696E6720746F20636F6D70696C650A504B03041400000008000CB2684EBF80089D670300007D07000003001C0072756E5554090003A8DB825CA8DB825C75780B000104F5010000041400000085556D6FD33010FE9E5F716485025A33F6B5D384265A50116BA7650810429B935C1A8BC40EB6B33643FC77CE76BAA65D11D1A425E77B79FCDC73D7A36727091727BA08822388573C3790CAAAE625C24AB1BA4635D2A9E2B5815C2A187667912E86910D40045330033D1FDD0AC3D6C044069554085CE4320A82C934BE390F07A7219C812EA84E7039BDFC34BB9CED5B2F66F378F1F9FADD94ECD3F9CDF5B7DBABC56C7E135A80B31C56089904210D14EC1E8141C5B8002D1B9522B46820690C59EFAC39D2F6427790DBEBE09A6BA38F3D5EAEE93FF663039EC377183D4038D84208E107BC7861ED396C13C28F331B2D02A0A78F77EB120639B780DFF3D2A00249982C080D2B6E0AFBD565C2B541A1B914902B59394C25C104996F601DF9C008E6D274645F2DE2D957A20BCB92B8A0A4AF898ED7A09BBA968A2EAF146BE9A25A5AB2B4A12650164A5D512F881ACDC592F8B8678AB3A4EC72168C18919020341A3368C4AF86EA65117CB17C8BA1A11402E9849CDC91C3EAEF440953F7DD42CA044851D28B241550B950F01443480BA6584A54682B1BCAB9E2049E9584B192F7B8DF0CDF312AC5FC5BCACA926A6FF93D06A6DDA5A891F4A7F057C3157924AD4BB5236415F8FEC4E7C361B02A6CBEEF303882D1D2C01BDBCB4CBA4E3A0184EBC1EFD3E7BEC89F109E9D5B0BC9B3DF72FB3C4AF4347CB4FD4B3E3B92EEF96F0A6E9C5DAD03E2DBB33A4C3DA93DC1F6989B541BFECFD13E9816B2EFD9CD8A1B2562D70EDB5E83CE9C91BA22579EF55DC6C3A725D6DCC0E98E194B8D4FFCAA7B627073D32DA2277E8746AE7F4EE3D77BDD6B5B7CBEA911C3A658D08BF29B8864DFDF0A5DC02E8B9EB9B9ECEB56D31A6C68FBD95187A10737DC4E7AE44B7584F835718D6E722DC9288C6AA1965C1837C2E465878A0653D3BECB8E01A365E4166DC9EC6A515897AC1DF780F697E601B033DAC763C8D020CD63E6EBDDBA7A63E8EBAC83769165309A2CE69F66F3E9EDC7CF930F53A0DAA3C96471E9BF12241158BDB5B2811513C642AED84FBA0AD39C105AAC0659E50656DAED5D4A1A68829034CB252DA3C8D6192DC6FB3D86456D78C51F9821DA34BCCC30674DD9FDCAD4B48C5ED9386DE83C1DE11AD3C6D8853686D899489D2D6D53F1D3F3FA78DE0BD2262B79E20B1F0AF2AA2667913195913D514CB5816B694A900F54DFCB0D23A27C607FFCC28DD4E2C0F57EF036F80B504B01021E030A0000000000D0AE684ED08595FC1F0000001F000000050018000000000001000000ED81000000006275696C64555405000388D6825C75780B000104F50100000414000000504B01021E031400000008000CB2684EBF80089D670300007D070000030018000000000001000000ED815E00000072756E5554050003A8DB825C75780B000104F50100000414000000504B0506000000000200020094000000020400000000, md5sum = '124297e893328fd90d162ba629ac85db' WHERE execid = 'swift';
 
-INSERT INTO `language` (`langid`, `externalid`, `name`, `extensions`, `require_entry_point`, `entry_point_description`, `allow_submit`, `allow_judge`, `time_factor`, `compile_script`)
-VALUES ('r', 'r', 'R', '["R"]', 0, "Main file", 0, 1, 1, 'r');
+INSERT INTO `language` (`langid`, `externalid`, `name`, `extensions`, `require_entry_point`, `entry_point_description`, `allow_submit`, `allow_judge`, `time_factor`, `compile_script`) VALUES
+('r', 'r', 'R', '["R"]', 0, "Main file", 0, 1, 1, 'r'),
+('swift', 'swift', 'Swift', '["swift"]', 0, "Main file", 0, 1, 1, 'swift');
 
 --
 -- Finally remove obsolete structures after moving data
